Fix horizontal orientation on mobile

--- a/frontend/worldPage/world.css
+++ b/frontend/worldPage/world.css
@@ -26,15 +26,15 @@ header {
 
 section {
   width: 100%; 
-  height: -moz-calc(100% - 96px); /* Firefox */
-  height: -webkit-calc(100% - 96px); /* Chrome, Safari */
+  height: -moz-calc(100% - 87px); /* Firefox */
+  height: -webkit-calc(100% - 87px); /* Chrome, Safari */
 }
 
 /* Create two columns/boxes that floats next to each other */
 .container-canvas {
   float: left;
   width: 65%;
-  background-color: #f1f1f1;
+  background-color: #000000;
   height: 100%;
 }
 
@@ -174,7 +174,7 @@ footer {
 /* mobile */
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media screen and (max-width: 500px), (pointer:none), (pointer:coarse) {
+@media screen and (max-width: 500px), (orientation: portrait) {
   .container-canvas {
     width: 100%;
     height: 50%;
